--- a/app/assets/stylesheets/mixins.scss
+++ b/app/assets/stylesheets/mixins.scss
@@ -8,6 +8,13 @@
     @content;
   }
 }
+
+@mixin col-min-361-max-766() {
+  @media (min-width: 361px) and (max-width: 766px) {
+    @content;
+  }
+}
+
 @mixin col-xs() {
   @media (max-width: 767px) {
     @content;
@@ -25,6 +32,12 @@
 }
 @mixin col-lg() {
   @media (min-width: 1200px) {
+    @content;
+  }
+}
+
+@mixin sm-portrait(){
+  @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {
     @content;
   }
 }
